[package]
name = "substrate-client-cli"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3", features = ["paw"] }
paw = "1"
serde = "1"
serde_json = "1"
jsonrpc-client-transports = "14.0.3"
parity-scale-codec = "1.1.0"
url = "2"
tokio = "0.1"
futures = { version = "0.3.0", features = ["compat"] }
node-template-runtime = "2"
sr-primitives = "2"
substrate-primitives = "2"
srml-support-rpc = "2"
substrate-rpc-api = "2"
srml-system = "2"
srml-support = "2"
substrate-primitives-storage = "2"
srml-timestamp = "2"
srml-babe = "2"
substrate-consensus-babe-primitives = "2"
srml-balances = "2"

[patch.crates-io]
node-template-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-support-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-rpc-api = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-system = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-support = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-primitives-storage = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-timestamp = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-babe = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-consensus-babe-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-balances = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
